Overrides : shapes keys driven by armature don't work on second instance #84373

Closed
opened 2021-01-04 14:05:04 +01:00 by Paul Szajner · 7 comments

System Information
Operating system: Linux-4.19.0-13-amd64-x86_64-with-debian-10.7 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.152.00

Blender Version
Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-12-29 18:57, hash: c1740e9ad0

Short description of error
When adding a second character to the scene using overrides the second character's shape keys, driven by the rig, doesn't work once you reload the scene.

Exact steps for others to reproduce the error
Download both files to the same directory,
shot.blend
lib.blend
lib.blend contain a cube and an armature in a collection called char. Changing the Y location of the bone drive a shape key on the cube.

shot.blend is a scene where collection char was linked and overriden twice. At this point things work as expected.
But once the file is reloaded only the first instance is working.

It's possible to resync the override, then it works again, but on reload it fails again.

Expected result :
Capture du 2021-01-04 14-02-14.png

Current result :
Capture du 2021-01-04 14-01-47.png

Thanks !

**System Information** Operating system: Linux-4.19.0-13-amd64-x86_64-with-debian-10.7 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.152.00 **Blender Version** Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-12-29 18:57, hash: `c1740e9ad0` **Short description of error** When adding a second character to the scene using overrides the second character's shape keys, driven by the rig, doesn't work once you reload the scene. **Exact steps for others to reproduce the error** Download both files to the same directory, [shot.blend](https://archive.blender.org/developer/F9550274/shot.blend) [lib.blend](https://archive.blender.org/developer/F9550273/lib.blend) lib.blend contain a cube and an armature in a collection called char. Changing the Y location of the bone drive a shape key on the cube. shot.blend is a scene where collection char was linked and overriden twice. At this point things work as expected. But once the file is reloaded only the first instance is working. It's possible to resync the override, then it works again, but on reload it fails again. Expected result : ![Capture du 2021-01-04 14-02-14.png](https://archive.blender.org/developer/F9550279/Capture_du_2021-01-04_14-02-14.png) Current result : ![Capture du 2021-01-04 14-01-47.png](https://archive.blender.org/developer/F9550276/Capture_du_2021-01-04_14-01-47.png) Thanks !
Author

Added subscriber: @sozap

Added subscriber: @sozap
Member

Added subscribers: @mont29, @filedescriptor

Added subscribers: @mont29, @filedescriptor
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm this on 2.92.0 Alpha, branch: master, commit date: 2021-01-06 10:55, hash: 4e23f08807. I also noticed that when I try to "Resync Library Override Hierarchy" on "char.001" nothing happens at first. Only when I update the screen does the change become visible. Additionally, I get this error (may be unrelated):

Failed to apply 'parent' override operation on OBCube.002

@mont29 what do you think? Is this a limitation or a bug?

I can confirm this on 2.92.0 Alpha, branch: master, commit date: 2021-01-06 10:55, hash: `4e23f08807`. I also noticed that when I try to "Resync Library Override Hierarchy" on "char.001" nothing happens at first. Only when I update the screen does the change become visible. Additionally, I get this error (may be unrelated): ```Failed to apply 'parent' override operation on OBCube.002``` @mont29 what do you think? Is this a limitation or a bug?

This issue was referenced by dc69ef6f3b

This issue was referenced by dc69ef6f3bec555b582341f2b498e40ffd5d841e

This issue was referenced by 319056679b

This issue was referenced by 319056679b4970a2be4a18ff625cfc690dfd7e42

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2021-01-15 19:00:36 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#84373
No description provided.